--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   background-color: #885053;
   /* makes it so you cant scroll lmfao */
   /* position: fixed; */
