--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,18 +1,14 @@
 .main {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
-  /* justify-content: center; */
   height: 100vh;
   width: 100vw;
   background-color: #885053;
-  /* makes it so you cant scroll lmfao */
-  /* position: fixed; */
-  /* overflow-x: hidden; */
 }
 
 .BearAsciiArt {
-  font-size: 1.2rem;
+  font-family: "Poppins", sans-serif !important;
+  font-size: rem;
   color: #fadc72;
 }
 
@@ -20,4 +16,32 @@
   font-family: monospace;
   font-size: 1.3rem;
   color: #fadc72;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  margin-top: 2%;
+}
+
+.MiscBox {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .MiscBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 45%;
+    margin-right: 2%;
+    margin-left: 2%;
+    height: 49rem;
+    background-color: #885053;
+    border: 4px solid #fadc72;
+    gap: 2%;
+    color: #fadc72;
+    border-radius: 10px;
+    overflow-y: scroll;
+  }
 }
