--- a/src/components/Building.module.css
+++ b/src/components/Building.module.css
@@ -2,22 +2,22 @@
   margin-top: 2rem;
   padding: 0rem 2rem;
   text-align: left;
-  color: #fadc72;
+  color: black;
 }
 
 .buildingImage {
   width: 100%;
   height: 30vh;
   object-fit: cover;
-  background-color: #885053;
-  border: 4px solid #fadc72;
+  background-color: #fadc72;
+  border: 4px solid black;
   border-radius: 10px;
 }
 
 .buildingHeader {
   font-size: 4rem;
   font-weight: 700;
-  color: #fadc72;
+  color: black;
   text-align: left;
   margin: 0;
 }
