--- a/src/components/ListOfDorms.module.css
+++ b/src/components/ListOfDorms.module.css
@@ -5,23 +5,30 @@
   width: 50%;
   margin-left: 2%;
   height: 49rem;
-  border: 4px solid #fadc72;
+  border: 4px solid black;
   border-radius: 10px;
   overflow-y: scroll;
 }
 
+@media (max-width: 768px) {
+  .ListOfDorms {
+    width: 96%;
+    margin-left: 2%;
+  }
+}
+
 .Dorm {
-  background-color: #885053;
+  background-color: #fadc72;
   display: flex;
   font-size: 1.5rem;
-  color: #fadc72;
+  color: black;
   width: 100%;
   align-items: center;
   /* justify-content: center; */
   padding-top: 2%;
   padding-left: 2%;
   padding-bottom: 2%;
-  border-bottom: 4px solid #fadc72;
+  border-bottom: 4px solid black;
   cursor: pointer;
 }
 
