--- a/src/components/Review.module.css
+++ b/src/components/Review.module.css
@@ -2,10 +2,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 50vw;
-  height: 70vh;
-  background-color: #885053;
-  border: 4px solid #fadc72;
+  width: 95vw;
+  height: 95vh;
+  background-color: #fadc72;
+  border: 4px solid black;
+  border-radius: 10px;
 }
 
 .TopRow {
@@ -23,7 +24,8 @@
   justify-content: center;
   width: 4rem;
   font-weight: 900;
-  color: #fadc72;
+  font-size: 1rem;
+  color: black;
   cursor: pointer;
 }
 
@@ -35,10 +37,87 @@
   justify-content: space-evenly;
 }
 
+@media (max-width: 768px) {
+  .RatingRow {
+    flex-direction: column !important;
+  }
+}
+
 .RatingPair {
-  color: #fadc72;
+  color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+@media (max-width: 768px) {
+  .RatingPair > h2 {
+    font-size: 1rem;
+    margin-bottom: 0rem;
+  }
+
+  .Overall {
+    font-size: 1rem;
+    margin-top: -3rem;
+  }
+}
+
+.Input {
+  width: 100%;
+  height: 40%;
+  background-color: #fadc72;
+  font-size: 1.5rem;
+  padding: 0.8rem 2rem 1rem 2rem;
+  resize: none;
+  font-family: "Poppins", sans-serif;
+}
+
+.Textarea {
+  width: 100%;
+  height: 100%;
+  background-color: #fadc72;
+  border: 4px solid black;
+  color: black;
+  font-size: 1.5rem;
+  padding: 1rem;
+  resize: none;
+  font-family: "Poppins", sans-serif;
+}
+
+.Textarea::placeholder {
+  color: black;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.5rem;
+}
+
+.Button {
+  width: 20%;
+  height: 12%;
+  background-color: #fadc72;
+  border: 4px solid black;
+  border-radius: 10px;
+  color: black;
+  font-size: 1.5rem;
+  padding: 1rem;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .Button {
+    width: 50%;
+    height: 8%;
+    margin-bottom: 2%;
+  }
+}
+
+@media (min-width: 1100px) {
+  .Review {
+    width: 50vw;
+    height: 70vh;
+  }
+
+  .TopRow > p {
+    font-size: 2rem;
+  }
 }
