--- a/src/components/Searchbar.module.css
+++ b/src/components/Searchbar.module.css
@@ -15,12 +15,12 @@
 }
 
 .Search {
-  /* rounded border, yellow */
-  border: 4px solid #fadc72;
-  color: #fadc72;
+  /* rounded border, #fadc72; */
+  border: 4px solid black;
+  color: black;
   border-radius: 10px;
   padding: 1.5rem;
-  background-color: #885053;
+  background-color: #fadc72;
   font-size: 2rem;
   margin-right: 2%;
   width: 96%;
@@ -28,7 +28,7 @@
 }
 
 .Search::placeholder {
-  color: #fadc72;
+  color: black;
   font-family: "Poppins", sans-serif;
   font-size: 2rem;
 }
