--- a/src/components/Building.module.css
+++ b/src/components/Building.module.css
@@ -17,7 +17,7 @@
   /* // take up the whole space */
   width: 100%;
   object-fit: cover;
-  background-color: #fadc72;
+  background-color: white;
   border: 4px solid black;
   border-radius: 10px;
   background-color: #885053;
