--- a/src/components/ListOfDorms.module.css
+++ b/src/components/ListOfDorms.module.css
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 50%;
-  margin-left: 2%;
-  height: 49rem;
-  border: 4px solid black;
+  width: 30vw;
+  height: 20rem;
+  border: 2px solid black;
   border-radius: 10px;
   overflow-y: scroll;
+  background-color: white;
 }
 
 @media (max-width: 768px) {
@@ -18,9 +18,9 @@
 }
 
 .Dorm {
-  background-color: #fadc72;
+  background-color: white;
   display: flex;
-  font-size: 1.5rem;
+  font-size: 1rem;
   color: black;
   width: 100%;
   align-items: center;
@@ -28,10 +28,11 @@
   padding-top: 2%;
   padding-left: 2%;
   padding-bottom: 2%;
-  border-bottom: 4px solid black;
+  border-bottom: 2px solid black;
   cursor: pointer;
 }
 
 .Dorm:hover {
-  background-color: #a55f63;
+  background-color: #e5e5e5;
+  font-weight: 900;
 }
