--- a/src/components/Review.module.css
+++ b/src/components/Review.module.css
@@ -4,9 +4,8 @@
   align-items: center;
   width: 95vw;
   height: 95vh;
-  background-color: #fadc72;
-  border: 4px solid black;
-  border-radius: 10px;
+  background-color: white;
+  border: 2px solid black;
 }
 
 .TopRow {
@@ -66,7 +65,7 @@
 .Input {
   width: 100%;
   height: 40%;
-  background-color: #fadc72;
+  background-color: white;
   font-size: 1.5rem;
   padding: 0.8rem 2rem 1rem 2rem;
   resize: none;
@@ -76,8 +75,8 @@
 .Textarea {
   width: 100%;
   height: 100%;
-  background-color: #fadc72;
-  border: 4px solid black;
+  background-color: white;
+  border: 2px solid black;
   color: black;
   font-size: 1.5rem;
   padding: 1rem;
@@ -94,9 +93,9 @@
 .Button {
   width: 20%;
   height: 12%;
-  background-color: #fadc72;
-  border: 4px solid black;
-  border-radius: 10px;
+  background-color: white;
+  border: 2px solid black;
+
   color: black;
   font-size: 1.5rem;
   padding: 1rem;
