--- a/src/components/Searchbar.module.css
+++ b/src/components/Searchbar.module.css
@@ -1,34 +1,23 @@
 .Searchbar {
   display: flex;
   align-items: center;
-  /* justify-content: center; */
-  margin-top: 2%;
-}
-
-.Logo {
-  padding-left: 2%;
-  height: 5rem;
-}
-
-.Logo:hover {
-  cursor: pointer;
+  width: 30vw;
+  margin-top: 0.7%;
 }
 
 .Search {
-  /* rounded border, #fadc72; */
-  border: 4px solid black;
+  border: 2px solid black;
   color: black;
+  padding: 1rem;
+  background-color: white;
+  font-size: 1rem;
+  width: 100%;
   border-radius: 10px;
-  padding: 1.5rem;
-  background-color: #fadc72;
-  font-size: 2rem;
-  margin-right: 2%;
-  width: 96%;
-  margin-left: 2%;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
 }
 
 .Search::placeholder {
   color: black;
   font-family: "Poppins", sans-serif;
-  font-size: 2rem;
+  font-size: 1rem;
 }
