--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,14 +1,80 @@
 .main {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   height: 100vh;
   width: 100vw;
-  background-color: #fadc72;
+  background-color: #eac9c1;
 }
 
 .BearAsciiArt {
+  position: absolute;
+  top: 5%;
+  left: 7%;
   font-family: "Poppins", sans-serif !important;
-  font-size: rem;
+  font-weight: 900;
+  font-size: 1rem;
+  color: black;
+}
+
+.HouseAsciiArt {
+  position: absolute;
+  top: 70%;
+  left: 80%;
+  font-family: "Poppins", sans-serif !important;
+  font-weight: 900;
+  font-size: 1rem;
+  color: black;
+}
+
+.SciliAsciiArt {
+  position: absolute;
+  top: 7%;
+  left: 74%;
+  font-family: "Poppins", sans-serif !important;
+  font-weight: 900;
+  font-size: 1rem;
+  color: black;
+}
+
+.ShowerAsciiArt {
+  position: absolute;
+  top: 50%;
+  left: 13%;
+  font-family: "Poppins", sans-serif !important;
+  font-weight: 900;
+  font-size: 1rem;
+  color: black;
+}
+
+.SofaAsciiArt {
+  position: absolute;
+  top: 78%;
+  left: 57%;
+  font-family: "Poppins", sans-serif !important;
+  font-weight: 900;
+  font-size: 1rem;
+  color: black;
+}
+
+.ToiletAsciiArt {
+  position: absolute;
+  top: 50%;
+  left: 70%;
+  font-family: "Poppins", sans-serif !important;
+  font-weight: 900;
+  font-size: 1rem;
+  color: black;
+}
+
+.LightbulbAsciiArt {
+  position: absolute;
+  top: 42%;
+  left: 85%;
+  font-family: "Poppins", sans-serif !important;
+  font-weight: 900;
+  font-size: 1rem;
   color: black;
 }
 
@@ -21,7 +87,7 @@
 .container {
   display: flex;
   flex-direction: row;
-  margin-top: 2%;
+  margin-top: 1%;
 }
 
 .MiscBox {
@@ -37,11 +103,10 @@
     margin-right: 2%;
     margin-left: 2%;
     height: 49rem;
-    background-color: #fadc72;
-    border: 4px solid black;
+    background-color: white;
+    border: 2px solid black;
     gap: 2%;
     color: black;
-    border-radius: 10px;
     overflow-y: scroll;
   }
 }
