--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -48,7 +48,7 @@
   color: black;
 }
 
-.SofaAsciiArt {
+.LightbulbAsciiArt {
   position: absolute;
   top: 78%;
   left: 57%;
@@ -68,10 +68,30 @@
   color: black;
 }
 
-.LightbulbAsciiArt {
+.ChairAsciiArt {
   position: absolute;
   top: 42%;
-  left: 85%;
+  left: 80%;
+  font-family: "Poppins", sans-serif !important;
+  font-weight: 900;
+  font-size: 1rem;
+  color: black;
+}
+
+.BedAsciiArt {
+  position: absolute;
+  top: 5%;
+  left: 45%;
+  font-family: "Poppins", sans-serif !important;
+  font-weight: 900;
+  font-size: 1rem;
+  color: black;
+}
+
+.SofaAsciiArt {
+  position: absolute;
+  top: 24%;
+  left: 15%;
   font-family: "Poppins", sans-serif !important;
   font-weight: 900;
   font-size: 1rem;
