--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -98,6 +98,16 @@
   color: black;
 }
 
+.SkateboardAsciiArt {
+  position: absolute;
+  top: 80%;
+  left: 35%;
+  font-family: "Poppins", sans-serif !important;
+  font-weight: 900;
+  font-size: 1rem;
+  color: black;
+}
+
 .header {
   font-family: monospace;
   font-size: 1.3rem;
