--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -12,7 +12,6 @@
   position: absolute;
   top: 5%;
   left: 7%;
-  font-family: "Poppins", sans-serif !important;
   font-weight: 900;
   font-size: 1rem;
   color: black;
@@ -22,7 +21,6 @@
   position: absolute;
   top: 70%;
   left: 80%;
-  font-family: "Poppins", sans-serif !important;
   font-weight: 900;
   font-size: 1rem;
   color: black;
@@ -32,7 +30,6 @@
   position: absolute;
   top: 7%;
   left: 74%;
-  font-family: "Poppins", sans-serif !important;
   font-weight: 900;
   font-size: 1rem;
   color: black;
@@ -42,7 +39,6 @@
   position: absolute;
   top: 50%;
   left: 13%;
-  font-family: "Poppins", sans-serif !important;
   font-weight: 900;
   font-size: 1rem;
   color: black;
@@ -52,7 +48,6 @@
   position: absolute;
   top: 78%;
   left: 57%;
-  font-family: "Poppins", sans-serif !important;
   font-weight: 900;
   font-size: 1rem;
   color: black;
@@ -62,7 +57,6 @@
   position: absolute;
   top: 50%;
   left: 70%;
-  font-family: "Poppins", sans-serif !important;
   font-weight: 900;
   font-size: 1rem;
   color: black;
@@ -72,7 +66,6 @@
   position: absolute;
   top: 42%;
   left: 80%;
-  font-family: "Poppins", sans-serif !important;
   font-weight: 900;
   font-size: 1rem;
   color: black;
@@ -82,7 +75,6 @@
   position: absolute;
   top: 5%;
   left: 45%;
-  font-family: "Poppins", sans-serif !important;
   font-weight: 900;
   font-size: 1rem;
   color: black;
@@ -92,7 +84,6 @@
   position: absolute;
   top: 24%;
   left: 15%;
-  font-family: "Poppins", sans-serif !important;
   font-weight: 900;
   font-size: 1rem;
   color: black;
@@ -102,7 +93,6 @@
   position: absolute;
   top: 80%;
   left: 35%;
-  font-family: "Poppins", sans-serif !important;
   font-weight: 900;
   font-size: 1rem;
   color: black;
@@ -120,23 +110,8 @@
   margin-top: 1%;
 }
 
-.MiscBox {
-  display: none;
-}
-
-@media (min-width: 768px) {
-  .MiscBox {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 45%;
-    margin-right: 2%;
-    margin-left: 2%;
-    height: 49rem;
-    background-color: white;
-    border: 2px solid black;
-    gap: 2%;
-    color: black;
-    overflow-y: scroll;
+@media screen and (max-width: 768px) {
+  .ascii {
+    display: none;
   }
 }
