--- a/src/components/ListOfDorms.module.css
+++ b/src/components/ListOfDorms.module.css
@@ -13,8 +13,8 @@
 
 @media (max-width: 768px) {
   .ListOfDorms {
-    width: 96%;
-    margin-left: 2%;
+    width: 96vw;
+    height: 76vh;
   }
 }
 
@@ -29,7 +29,7 @@
   padding-top: 2%;
   padding-left: 2%;
   padding-bottom: 2%;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid rgb(203, 203, 203);
   cursor: pointer;
 }
 
