--- a/src/components/Review.module.css
+++ b/src/components/Review.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   width: 95vw;
   height: 95vh;
-  background-color: white;
+  background-color: #eac9c1;
   border: 2px solid black;
 }
 
@@ -14,6 +14,11 @@
   align-items: center;
   width: 100%;
   height: 4rem;
+}
+
+.Close {
+  font-size: 1.5rem;
+  margin-right: 1rem;
 }
 
 .TopRow > p {
@@ -50,10 +55,15 @@
   justify-content: center;
 }
 
+.RatingPair > h2 {
+  font-weight: 400;
+}
+
 @media (max-width: 768px) {
   .RatingPair > h2 {
     font-size: 1rem;
     margin-bottom: 0rem;
+    font-weight: 400;
   }
 
   .Overall {
@@ -65,7 +75,7 @@
 .Input {
   width: 100%;
   height: 40%;
-  background-color: white;
+  background-color: #eac9c1;
   font-size: 1.5rem;
   padding: 0.8rem 2rem 1rem 2rem;
   resize: none;
@@ -75,7 +85,7 @@
 .Textarea {
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: #eac9c1;
   border: 2px solid black;
   color: black;
   font-size: 1.5rem;
