--- a/src/components/Review.module.css
+++ b/src/components/Review.module.css
@@ -1,132 +1,115 @@
 .Review {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 95vw;
-  height: 95vh;
+  height: 50vh;
+  width: 50vw;
   background-color: #eac9c1;
   border: 2px solid black;
+  border-radius: 10px;
+  gap: 1rem;
 }
 
-.TopRow {
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
-  width: 100%;
-  height: 4rem;
-}
-
-.Close {
-  font-size: 1.5rem;
-  margin-right: 1rem;
-}
-
-.TopRow > p {
+.RatingContainer {
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  width: 4rem;
-  font-weight: 900;
-  font-size: 1rem;
-  color: black;
-  cursor: pointer;
+  width: 100%;
+  height: 50%;
 }
 
-.RatingRow {
+.Rating {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
   width: 100%;
+}
+
+.Rating > h1 {
+  font-size: 1.5rem;
+  font-weight: 400;
+  color: black;
+}
+
+.ReviewContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 70%;
+  width: 90%;
+  background-color: #eac9c1;
+  border: 2px solid black;
+  border-radius: 4px;
+}
+
+.ReviewInput {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  font-family: "Poppins", sans-serif;
+  background-color: #ffffff;
+  border-radius: 2px;
+  padding: 1rem;
+  font-size: 1rem;
+  height: 100%;
+  width: 100%;
+  resize: none;
+}
+
+.ButtonContainer {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
-}
-
-@media (max-width: 768px) {
-  .RatingRow {
-    flex-direction: column !important;
-  }
-}
-
-.RatingPair {
-  color: black;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.RatingPair > h2 {
-  font-weight: 400;
-}
-
-@media (max-width: 768px) {
-  .RatingPair > h2 {
-    font-size: 1rem;
-    margin-bottom: 0rem;
-    font-weight: 400;
-  }
-
-  .Overall {
-    font-size: 1rem;
-    margin-top: -3rem;
-  }
-}
-
-.Input {
+  height: 30%;
   width: 100%;
-  height: 40%;
-  background-color: #eac9c1;
-  font-size: 1.5rem;
-  padding: 0.8rem 2rem 1rem 2rem;
-  resize: none;
-  font-family: "Poppins", sans-serif;
-}
-
-.Textarea {
-  width: 100%;
-  height: 100%;
-  background-color: #eac9c1;
-  border: 2px solid black;
-  color: black;
-  font-size: 1.5rem;
-  padding: 1rem;
-  resize: none;
-  font-family: "Poppins", sans-serif;
-}
-
-.Textarea::placeholder {
-  color: black;
-  font-family: "Poppins", sans-serif;
-  font-size: 1.5rem;
+  margin: 0;
+  margin-bottom: 1rem;
 }
 
 .Button {
-  width: 20%;
-  height: 12%;
-  background-color: white;
-  border: 2px solid black;
-
-  color: black;
-  font-size: 1.5rem;
-  padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 62%;
+  width: 42%;
+  background-color: #e0c3bc;
+  color: rgb(0, 0, 0);
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 4px;
+  font-size: 1rem;
+  font-weight: 700;
   cursor: pointer;
+  margin: 0;
+}
+
+.Title {
+  font-weight: 500;
+  font-size: 1.5rem;
+  margin-bottom: 0;
+  margin-top: 2rem;
+  height: 10%;
 }
 
 @media (max-width: 768px) {
-  .Button {
-    width: 50%;
-    height: 8%;
-    margin-bottom: 2%;
-  }
-}
-
-@media (min-width: 1100px) {
   .Review {
-    width: 50vw;
-    height: 70vh;
+    height: 90vh;
+    width: 90vw;
   }
 
-  .TopRow > p {
-    font-size: 2rem;
+  .RatingContainer {
+    margin-top: 1rem;
+    flex-direction: column;
+  }
+
+  .Rating > h1 {
+    margin: 0;
   }
 }
