--- a/src/components/Dorm.module.css
+++ b/src/components/Dorm.module.css
@@ -41,7 +41,7 @@
 }
 
 .buildingHeader {
-  font-size: 4rem;
+  font-size: 2.5rem;
   font-weight: 700;
   color: black;
   text-align: left;
@@ -88,6 +88,7 @@
 }
 
 .gridColTwo {
+  margin-top: 10px;
   padding-left: 20px;
   text-align: center;
   overflow: hidden;
@@ -135,4 +136,29 @@
   .gridColTwo {
     padding-left: 0;
   }
+}
+
+.ReviewHeader {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.addReview {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  background-color: #562929;
+  padding: 0.8rem 1.3rem;
+  font-size: 1.1rem;
+  font-weight: 700;
+  color: rgb(255, 255, 255);
+  border-radius: 9px;
+  text-align: left;
+  margin: 0;
+  cursor: pointer;
 }
