--- a/src/components/Review.module.css
+++ b/src/components/Review.module.css
@@ -32,6 +32,7 @@
 .Rating > h1 {
   font-size: 1.5rem;
   font-weight: 400;
+  margin-bottom: 0rem;
   color: black;
 }
 
@@ -42,7 +43,7 @@
   justify-content: space-evenly;
   height: 70%;
   width: 90%;
-  background-color: #eac9c1;
+  background-color: #60ae3c;
   border: 2px solid black;
   border-radius: 4px;
 }
@@ -81,7 +82,6 @@
   height: 62%;
   width: 42%;
   color: rgb(0, 0, 0);
-  border: 2px solid rgb(0, 0, 0);
   border-radius: 4px;
   font-size: 1rem;
   font-weight: 700;
