--- a/src/components/buttons/Review.module.css
+++ b/src/components/buttons/Review.module.css
@@ -32,7 +32,7 @@
 .Rating > h1 {
   font-size: 1.5rem;
   font-weight: 400;
-  margin-bottom: 0rem;
+  margin-bottom: 0.2rem;
   color: black;
 }
 
@@ -43,7 +43,7 @@
   justify-content: space-evenly;
   height: 70%;
   width: 90%;
-  background-color: #60ae3c;
+  background-color: #eac9c1;
   border: 2px solid black;
   border-radius: 4px;
 }
@@ -82,6 +82,7 @@
   height: 62%;
   width: 42%;
   color: rgb(0, 0, 0);
+  border: 2px solid rgb(0, 0, 0);
   border-radius: 4px;
   font-size: 1rem;
   font-weight: 700;
