--- a/src/components/buttons/Review.module.css
+++ b/src/components/buttons/Review.module.css
@@ -79,7 +79,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  height: 62%;
+  height: 3rem;
   width: 42%;
   color: rgb(0, 0, 0);
   border: 2px solid rgb(0, 0, 0);
