--- a/src/components/Dorm.module.css
+++ b/src/components/Dorm.module.css
@@ -187,6 +187,13 @@
   }
 }
 
+@media (max-width: 540px) {
+  .buildingHeader {
+    font-size: 1.2rem;
+    gap: 1rem;
+  }
+}
+
 .ReviewHeader {
   display: flex;
   flex-direction: row;
