--- a/src/components/Dorm.module.css
+++ b/src/components/Dorm.module.css
@@ -220,3 +220,39 @@
   border-radius: 10px;
   background-color: #999999;
 }
+
+.leftSide {
+  display: flex;
+  flex-direction: row;
+}
+
+.summaryEmojis {
+  font-weight: 700;
+  font-size: 1.1rem;
+  margin-left: 1rem;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  align-items: center;
+}
+
+.phoneEmojis {
+  display: none;
+}
+
+@media (max-width: 800px) {
+  .summaryEmojis {
+    display: none;
+  }
+
+  .phoneEmojis {
+    margin-top: 1rem;
+    display: flex;
+    font-weight: 700;
+    font-size: 1rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
