--- a/src/components/ListOfDorms.module.css
+++ b/src/components/ListOfDorms.module.css
@@ -8,7 +8,7 @@
   border-radius: 10px;
   overflow-y: scroll;
   background-color: white;
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2); */
 }
 
 .Windows::-webkit-scrollbar-track {
