--- a/src/components/Searchbar.module.css
+++ b/src/components/Searchbar.module.css
@@ -15,7 +15,7 @@
   font-size: 1rem;
   width: 100%;
   border-radius: 10px;
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2); */
   z-index: 1;
 }
 
