--- a/src/components/DormReview.module.css
+++ b/src/components/DormReview.module.css
@@ -4,7 +4,7 @@
   /* justify-content: center; */
   margin: 0 auto;
   width: 100%;
-  height: 100%;
+  height: fit-content;
   padding: 1.5rem 1.5rem 1.5rem 0.5rem;
   text-align: left;
 }
