--- a/src/components/buttons/AddImage.module.css
+++ b/src/components/buttons/AddImage.module.css
@@ -28,6 +28,14 @@
   width: 100%;
 }
 
+.ImageUploaded {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
 .ImageInput {
   height: 100%;
 }
