--- a/src/components/Dorm.module.css
+++ b/src/components/Dorm.module.css
@@ -262,3 +262,9 @@
     justify-content: space-between;
   }
 }
+
+.listItem {
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: rgb(95, 21, 21);
+}
