--- a/src/components/buttons/AddImage.module.css
+++ b/src/components/buttons/AddImage.module.css
@@ -32,6 +32,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  font-weight: 600;
   width: 100%;
   height: 100%;
 }
