--- a/src/components/Dorm.module.css
+++ b/src/components/Dorm.module.css
@@ -66,6 +66,10 @@
   cursor: pointer;
 }
 
+.addImage:hover {
+  background-color: #860b0b;
+}
+
 .buildingHeader {
   font-size: 2.5rem;
   font-weight: 700;
@@ -211,6 +215,10 @@
   text-align: left;
   margin: 0;
   cursor: pointer;
+}
+
+.addReview:hover {
+  background-color: #860b0b;
 }
 
 .Windows::-webkit-scrollbar-track {
