--- a/src/components/ListOfDorms.module.css
+++ b/src/components/ListOfDorms.module.css
@@ -11,6 +11,13 @@
   /* box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2); */
 }
 
+@media screen and (max-width: 820px) {
+  .ListOfDorms {
+    width: 92vw;
+    height: 60vh;
+  }
+}
+
 .Windows::-webkit-scrollbar-track {
   border-left: 1.3px solid #c4c4c4;
 }
@@ -23,13 +30,6 @@
 .Windows::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background-color: #999999;
-}
-
-@media (max-width: 768px) {
-  .ListOfDorms {
-    width: 92vw;
-    height: 76vh;
-  }
 }
 
 .Dorm {
