--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -107,14 +107,14 @@
 .container {
   display: flex;
   flex-direction: row;
-  margin-top: 1%;
+  margin-top: 0.5%;
 }
 
 .ascii {
   user-select: none;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 820px) {
   .BearAsciiArt {
     display: none;
   }
@@ -178,7 +178,7 @@
   display: none;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 820px) {
   .main {
     display: flex;
     flex-direction: column;
@@ -200,7 +200,6 @@
 
   .textSignIn {
     display: flex;
-    margin-top: 0.5rem;
     text-decoration: underline;
   }
 }
@@ -236,8 +235,14 @@
   color: rgb(255, 255, 255);
   border-radius: 9px;
   text-align: left;
-  margin-bottom: 0.25rem;
   cursor: pointer;
+}
+
+@media screen and (max-width: 820px) {
+  .promoButton {
+    font-size: 0.9rem;
+    margin-bottom: 0.45rem;
+  }
 }
 
 .promoText {
