--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -178,6 +178,12 @@
   display: none;
 }
 
+.title {
+  font-size: "2rem";
+  margin: 0;
+  font-weight: normal;
+}
+
 @media screen and (max-width: 820px) {
   .main {
     display: flex;
@@ -191,7 +197,9 @@
 
   .title {
     padding-top: 1.2rem;
-    margin-bottom: 0;
+    font-size: "2rem";
+    font-weight: normal;
+    margin: 0;
   }
 
   .ascii {
@@ -220,6 +228,12 @@
   color: black;
   cursor: pointer;
   font-size: 1rem;
+}
+
+.textLinks {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
 }
 
 .promoButton {
